--- a/.travis.yml
+++ b/.travis.yml
@@ -30,3 +30,23 @@ after_success:
       docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
       docker push "${TRAVIS_REPO_SLUG}:latest";
     fi
+  - if [[ ${TRAVIS_JOB_NUMBER} = *.1 ]]; then
+      cd $HOME/docker/portage;
+      rm -rf cinch;
+      git fetch origin gh-pages && git checkout -b gh-pages FETCH_HEAD;
+      CON=$(docker run -d ${TRAVIS_REPO_SLUG}:latest) && docker cp ${CON}:/home/portage/portage/build/doc/doxygen/html . ;
+      mv html/* .;
+      rmdir html; 
+      git add --all;
+      if [[ ${TRAVIS_BRANCH} = master && ${encrypted_a5730b319e5b_key} && ${encrypted_a5730b319e5b_iv} && ${TRAVIS_PULL_REQUEST} == false ]]; then
+        git config --global user.name "Automatic Deployment (Travis CI)";
+        git config --global user.email "portage@lanl.gov";
+        git commit -m "Documentation Update";
+        openssl aes-256-cbc -K $encrypted_a5730b319e5b_key -iv $encrypted_a5730b319e5b_iv -in deploy.enc -out ~/.ssh/id_rsa -d;
+        chmod 600 ~/.ssh/id_rsa;
+        git push git@github.com:${TRAVIS_REPO_SLUG} gh-pages:gh-pages;
+      else
+        git status;
+        git diff --cached --no-color | head -n 500;
+      fi;
+    fi
