--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -42,6 +42,7 @@ POSSIBILITY OF SUCH DAMAGE.
 
 add_subdirectory(apptest_cmp)
 add_subdirectory(simple_mesh_app)
+add_subdirectory(swarmapp)
 if (Jali_DIR OR FLECSI_DIR)
   add_subdirectory(portageapp)
 endif (Jali_DIR OR FLECSI_DIR)
