--- a/src/wonton/CMakeLists.txt
+++ b/src/wonton/CMakeLists.txt
@@ -51,12 +51,12 @@ if (Jali_DIR)
         )
 endif (Jali_DIR)
 
-if (FLECSI_INSTALL_DIR)
+if (FLECSI_DIR)
     set(flecsi_wrapper_headers
         mesh/flecsi/flecsi_mesh_wrapper.h
         state/flecsi/flecsi_state_wrapper.h
         )
-endif (FLECSI_INSTALL_DIR)
+endif (FLECSI_DIR)
 
 set(wrappers_HEADERS
     ${jali_wrapper_headers}
@@ -103,11 +103,14 @@ if (ENABLE_UNIT_TESTS)
                      THREADS 1)
    endif (Jali_DIR)
 
-   if (FLECSI_INSTALL_DIR)
-      cinch_add_unit(test_flecsi_mesh_wrapper
-                     SOURCES mesh/flecsi/test/test_flecsi_mesh_wrapper.cc
-                     LIBRARIES portage ${FLECSI_LIBRARIES})
-   endif (FLECSI_INSTALL_DIR)
+   if (FLECSI_DIR)
+      cinch_add_unit(flecsi_2d
+                     SOURCES mesh/flecsi/test/flecsi_2d.cc
+                     LIBRARIES portage ${FLECSI_LIBRARIES} ${FLECSISP_LIBRARIES})
+      #cinch_add_unit(test_flecsi_mesh_wrapper
+      #               SOURCES mesh/flecsi/test/test_flecsi_mesh_wrapper.cc
+      #               LIBRARIES portage ${FLECSI_LIBRARIES})
+   endif (FLECSI_DIR)
 
    # Simple Mesh wrapper
    cinch_add_unit(test_simple_mesh_wrapper
