--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,32 @@
-# Blacklist
-branches:
-  except:
-    - gh-pages
+language: cpp
 
-# Dependencies
-addons:
-  apt:
-    packages:
-      - doxygen
-      - doxygen-doc
-      - doxygen-latex
-      - doxygen-gui
-      - graphviz
+sudo: required
+
+services:
+- docker
+
+env:
+  matrix:
+    - MPI=OFF
+    - MPI=ON DOCKERHUB=true
+    - MPI=On COVERAGE=ON SONARQUBE=ON
 
 script:
-  - mkdir build
-  - cd build
-  - cmake -D ENABLE_DOXYGEN=True ..
-  - make doxygen
+  - cp -vr docker ${HOME}/docker
+  - cd ../../
+  - mv -v ${TRAVIS_REPO_SLUG} $HOME/docker
+  - docker build --build-arg MPI=${MPI}
+                 --build-arg SONARQUBE=${SONARQUBE} --build-arg SONARQUBE_TOKEN=${SONARQUBE_TOKEN}
+		 --build-arg SONARQUBE_GITHUB_TOKEN=${SONARQUBE_GITHUB_TOKEN}
+                 --build-arg CI=${CI} --build-arg TRAVIS=${TRAVIS} --build-arg TRAVIS_OS_NAME=${TRAVIS_OS_NAME}
+                 --build-arg TRAVIS_BRANCH=${TRAVIS_BRANCH} --build-arg TRAVIS_JOB_NUMBER=${TRAVIS_JOB_NUMBER}
+                 --build-arg TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST} --build-arg TRAVIS_JOB_ID=${TRAVIS_JOB_ID}
+                 --build-arg TRAVIS_TAG=${TRAVIS_TAG} --build-arg TRAVIS_REPO_SLUG=${TRAVIS_REPO_SLUG}
+                 --build-arg TRAVIS_COMMIT=${TRAVIS_COMMIT} --build-arg COVERAGE=${COVERAGE}
+                 -t ${TRAVIS_REPO_SLUG}:latest ${HOME}/docker/
 
 after_success:
-  - cd $TRAVIS_BUILD_DIR
-  - mkdir code_docs
-  - cd code_docs
-  - git clone -b gh-pages https://git@github.com/laristra/portage.git  
-
-#  - chmod +x generateDocsAndDeploy.sh
-#  - ./generateDocsAndDeploy.sh
+  - if [[ ${DOCKERHUB} = true && ${DOCKER_USERNAME} && ${DOCKER_PASSWORD} && ${TRAVIS_PULL_REQUEST} == false && ${TRAVIS_BRANCH} == master ]]; then
+      docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
+      docker push "${TRAVIS_REPO_SLUG}:latest";
+fi
