flecsi_2d test fixes

--- a/src/wonton/CMakeLists.txt
+++ b/src/wonton/CMakeLists.txt
@@ -51,12 +51,14 @@ if (Jali_DIR)
         )
 endif (Jali_DIR)
 
-if (FLECSI_DIR)
+#if (FleCSI_DIR)
+if (ENABLE_FleCSI)
     set(flecsi_wrapper_headers
         mesh/flecsi/flecsi_mesh_wrapper.h
         state/flecsi/flecsi_state_wrapper.h
         )
-endif (FLECSI_DIR)
+#endif (FleCSI_DIR)
+endif ()
 
 set(wrappers_HEADERS
     ${jali_wrapper_headers}
@@ -103,14 +105,16 @@ if (ENABLE_UNIT_TESTS)
                      THREADS 1)
    endif (Jali_DIR)
 
-   if (FLECSI_DIR)
+   #if (FleCSI_DIR)
+    if (ENABLE_FleCSI)
       cinch_add_unit(flecsi_2d
                      SOURCES mesh/flecsi/test/flecsi_2d.cc
-                     LIBRARIES portage ${FLECSI_LIBRARIES} ${FLECSISP_LIBRARIES})
+                     LIBRARIES portage ${FleCSI_LIBRARIES} ${FleCSISP_LIBRARIES})
       #cinch_add_unit(test_flecsi_mesh_wrapper
       #               SOURCES mesh/flecsi/test/test_flecsi_mesh_wrapper.cc
       #               LIBRARIES portage ${FLECSI_LIBRARIES})
-   endif (FLECSI_DIR)
+   #endif (FleCSI_DIR)
+    endif ()
 
    # Simple Mesh wrapper
    cinch_add_unit(test_simple_mesh_wrapper
