FleCSI with ENABLE_MPI=True

--- a/src/wonton/CMakeLists.txt
+++ b/src/wonton/CMakeLists.txt
@@ -106,11 +106,15 @@ if (ENABLE_UNIT_TESTS)
     if (ENABLE_FleCSI)
       cinch_add_unit(flecsi_2d
                      SOURCES mesh/flecsi/test/flecsi_2d.cc
-                     LIBRARIES portage ${FleCSI_LIBRARIES} ${FleCSISP_LIBRARIES})
+                     LIBRARIES portage ${FleCSI_LIBRARIES} ${FleCSISP_LIBRARIES}
+                     POLICY MPI
+                     THREADS 1)
       
       cinch_add_unit(flecsi_3d
                      SOURCES mesh/flecsi/test/flecsi_3d.cc
-                     LIBRARIES portage ${FleCSI_LIBRARIES} ${FleCSISP_LIBRARIES})
+                     LIBRARIES portage ${FleCSI_LIBRARIES} ${FleCSISP_LIBRARIES}
+                     POLICY MPI
+                     THREADS 1)
 
       #cinch_add_unit(test_flecsi_mesh_wrapper
       #               SOURCES mesh/flecsi/test/test_flecsi_mesh_wrapper.cc
