In poking around the accumulate class a bit, I discovered that the quadratic tests were commented out, and didn't work, even after I left an earlier commit message that they did work. Furthermore, the LAPACK solver was not being used. I have now corrected both of these deficiencies.

--- a/src/accumulate/CMakeLists.txt
+++ b/src/accumulate/CMakeLists.txt
@@ -58,6 +58,7 @@ if (ENABLE_UNIT_TESTS)
 
   cinch_add_unit(test_accumulate
     SOURCES test/test_accumulate.cc
+    LIBRARIES ${LAPACKE_LIBRARIES}
     POLICY MPI
     THREADS 1
     )
