changing accumulate to use LAPACK requires LAPACK to be loaded into these tests

--- a/app/swarmapp/CMakeLists.txt
+++ b/app/swarmapp/CMakeLists.txt
@@ -47,7 +47,7 @@ POSSIBILITY OF SUCH DAMAGE.
 
 # Swarm test
 add_executable(swarmapp swarmapp.cc)
-target_link_libraries(swarmapp portage ${EXTRA_LIBS})
+target_link_libraries(swarmapp portage ${EXTRA_LIBS} ${LAPACKE_LIBRARIES})
 
 
 #TCMalloc option
