--- a/src/estimate/CMakeLists.txt
+++ b/src/estimate/CMakeLists.txt
@@ -58,6 +58,7 @@ if (ENABLE_UNIT_TESTS)
 
   cinch_add_unit(test_estimate
     SOURCES test/test_estimate.cc
+    LIBRARIES ${LAPACKE_LIBRARIES}
     POLICY MPI
     THREADS 1
     )
