--- a/src/swarm/CMakeLists.txt
+++ b/src/swarm/CMakeLists.txt
@@ -67,6 +67,7 @@ if (ENABLE_UNIT_TESTS)
 
   cinch_add_unit(test_swarm_state
     SOURCES test/test_swarm_state.cc
+    LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
     POLICY MPI
     THREADS 1
     )
