Add my timing study app timingapp.cc to the repo
Also remove timing study capabilities from portageapp_jali.cc
(they are now in the new app) and delete timing_test.cc (superseded
by the new app).

--- a/app/timingapp/CMakeLists.txt
+++ b/app/timingapp/CMakeLists.txt
@@ -48,7 +48,7 @@ if (Jali_DIR)
 # Add a rule to build the executable
 # timing example
 
-  add_executable(timingapp timing_test.cc)
+  add_executable(timingapp timingapp.cc)
   target_link_libraries(timingapp portage ${EXTRA_LIBS})
   if (ENABLE_MPI)
     target_link_libraries(timingapp ${MPI_CXX_LIBRARIES})
