--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -7,9 +7,9 @@ Please see the license file at the root of this repository, or at:
 add_subdirectory(apptest_cmp)
 add_subdirectory(simple_mesh_app)
 add_subdirectory(swarmapp)
-if (Jali_DIR OR FLECSI_DIR)
+if (Jali_DIR OR ENABLE_FleCSI)
   add_subdirectory(portageapp)
-endif (Jali_DIR OR FLECSI_DIR)
+endif (Jali_DIR OR ENABLE_FleCSI)
 if (Jali_DIR)
   add_subdirectory(shotshellapp)
   add_subdirectory(timingapp)
