--- a/app/portageapp/CMakeLists.txt
+++ b/app/portageapp/CMakeLists.txt
@@ -36,24 +36,24 @@ if (Jali_DIR)
 endif (Jali_DIR)
 
 # FleCSI example
-if (FLECSI_INSTALL_DIR)
+if (ENABLE_FleCSI)
   add_executable(portageapp_flecsi portageapp_flecsi.cc)
   target_link_libraries(portageapp_flecsi portage ${EXTRA_LIBS})
-  include_directories(${FLECSI_INCLUDE_DIRS})
-  target_link_libraries(portageapp_flecsi ${FLECSI_LIBRARIES})
+  include_directories(${FleCSI_INCLUDE_DIR} ${FleCSISP_INCLUDE_DIR})
+  target_link_libraries(portageapp_flecsi ${FleCSI_LIBRARIES} ${FleCSISP_LIBRARIES})
 # these appear needed because of something we are pulling in within src
   if (ENABLE_MPI)
       target_link_libraries(portageapp_flecsi ${MPI_CXX_LIBRARIES})
       set_target_properties(portageapp_flecsi PROPERTIES
                             LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
   endif (ENABLE_MPI)
-endif (FLECSI_INSTALL_DIR)
+endif (ENABLE_FleCSI)
 
-if (JALI_DIR AND FLECSI_INSTALL_DIR)
+if (JALI_DIR AND ENABLE_FleCSI)
   add_executable(portageapp_jali2flecsi portageapp_jali2flecsi.cc)
   target_link_libraries(portageapp_jali2flecsi portageapp_jali2flecsi ${EXTRA_LIBS})
-  include_directories(${FLECSI_INCLUDE_DIRS})
-  target_link_libraries(portageapp_jali2flecsi ${FLECSI_LIBRARIES})
+  include_directories(${FleCSI_INCLUDE_DIR} ${FleCSISP_INCLUDE_DIR})
+  target_link_libraries(portageapp_jali2flecsi ${FleCSI_LIBRARIES} ${FleCSISP_LIBRARIES})
 # these appear needed because of something we are pulling in within src
   if (ENABLE_MPI)
       target_link_libraries(portageapp_jali2flecsi ${MPI_CXX_LIBRARIES})
@@ -63,7 +63,7 @@ if (JALI_DIR AND FLECSI_INSTALL_DIR)
   target_link_libraries(portageapp_jali2flecsi ${Jali_LIBRARIES}
                         ${Jali_TPL_LIBRARIES})
 
-endif (JALI_DIR AND FLECSI_INSTALL_DIR)
+endif (JALI_DIR AND ENABLE_FleCSI)
 
 #TCMalloc option
 set(ENABLE_TCMALLOC TRUE CACHE BOOL "Use TCMalloc")
@@ -73,12 +73,12 @@ if(ENABLE_TCMALLOC)
   if (Jali_DIR)
     target_link_libraries(portageapp_jali ${TCMALLOC_LIB})
   endif (Jali_DIR)
-  if (FLECSI_INSTALL_DIR)
+  if (ENABLE_FleCSI)
     target_link_libraries(portageapp_flecsi ${TCMALLOC_LIB})
-  endif (FLECSI_INSTALL_DIR)
-  if (JALI_DIR AND FLECSI_INSTALL_DIR)
+  endif (ENABLE_FleCSI)
+  if (JALI_DIR AND ENABLE_FleCSI)
     target_link_libraries(portageapp_jali2flecsi ${TCMALLOC_LIB})
-  endif (JALI_DIR AND FLECSI_INSTALL_DIR)
+  endif (JALI_DIR AND ENABLE_FleCSI)
 endif(ENABLE_TCMALLOC)
 
 # Profiling option (to allow pausing and resuming profiling during execution)
@@ -92,12 +92,12 @@ if(ENABLE_PROFILE)
   if (Jali_DIR)
     target_link_libraries(portageapp_jali ${VTUNE_LIB})
   endif (Jali_DIR)
-  if (FLECSI_INSTALL_DIR)
+  if (ENABLE_FleCSI)
     target_link_libraries(portageapp_flecsi ${VTUNE_LIB})
-  endif (FLECSI_INSTALL_DIR)
-  if (JALI_DIR AND FLECSI_INSTALL_DIR)
+  endif (ENABLE_FleCSI)
+  if (JALI_DIR AND ENABLE_FleCSI)
     target_link_libraries(portageapp_jali2flecsi ${VTUNE_LIB})
-  endif (JALI_DIR AND FLECSI_INSTALL_DIR)
+  endif (JALI_DIR AND ENABLE_FleCSI)
 endif(ENABLE_PROFILE)
 
 if (ENABLE_APP_TESTS)
