--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ after_success:
       docker push "${TRAVIS_REPO_SLUG}:latest";
     fi
 #  - if [[ ${DOCS} ]]; then
-  - cd ${HOME}/docker/portage; mkdir built-docs
+  - cd ${HOME}/docker/portage; mkdir built-docs;
     CON=$(docker run -d ${TRAVIS_REPO_SLUG}:latest) && docker cp ${CON}:/home/portage/portage/build/doc ./built-docs ;
     pip3 install doctr;
     doctr deploy --no-require-master . --built-docs built-docs/doxygen/html;
