--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -7,6 +7,7 @@ Please see the license file at the root of this repository, or at:
 add_subdirectory(apptest_cmp)
 add_subdirectory(simple_mesh_app)
 add_subdirectory(swarmapp)
+add_subdirectory(msmapp)
 if (Jali_DIR OR ENABLE_FleCSI)
   add_subdirectory(portageapp)
 endif (Jali_DIR OR ENABLE_FleCSI)
