if building from a tagged version, build the docs

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ after_success:
       docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
       docker push "${TRAVIS_REPO_SLUG}:latest";
     fi
-  - if [[ ${DOCS} ]]; then
+  - if [[ ${DOCS} || -n ${TRAVIS_TAG} ]]; then
       cd ${HOME}/docker/portage;
       CON=$(docker run -d ${TRAVIS_REPO_SLUG}:latest) && docker cp ${CON}:/home/portage/portage/build/doc . ;
       pip3 install doctr;
