--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -39,7 +39,7 @@ RUN cd .. && if [ ${COVERAGE} ]; then \
     $HOME/.local/bin/codecov; \
   fi; \
 fi && cd -
-RUN if [ ${DOCS} ]; then \
+RUN if [ ${DOCS} || -n ${TRAVIS_TAG} ]; then \
   make doxygen; \
 fi
 RUN cd .. && if [ ${SONARQUBE} ]; then \
