--- a/app/swarmapp/CMakeLists.txt
+++ b/app/swarmapp/CMakeLists.txt
@@ -11,7 +11,8 @@ Please see the license file at the root of this repository, or at:
 
 # Swarm test
 add_executable(swarmapp swarmapp.cc)
-target_link_libraries(swarmapp portage ${EXTRA_LIBS} ${LAPACKE_LIBRARIES})
+target_link_libraries(swarmapp portage
+  ${EXTRA_LIBS} ${LAPACKE_LIBRARIES} ${MPI_CXX_LIBRARIES})
 
 
 #TCMalloc option
