.travis.yml: disable doctr for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,6 @@ after_success:
   - if [[ ${DOCS} ]]; then
       cd ${HOME}/docker/portage;
       CON=$(docker run -d ${TRAVIS_REPO_SLUG}:latest) && docker cp ${CON}:/home/portage/portage/build/doc . ;
-      pip3 install doctr;
-      doctr deploy . --built-docs doc/portage/doxygen/html;
+      #pip3 install doctr;
+      #doctr deploy . --built-docs doc/portage/doxygen/html;
     fi
