Run simple_mesh tests with SERIAL execution policy

--- a/src/simple_mesh/CMakeLists.txt
+++ b/src/simple_mesh/CMakeLists.txt
@@ -23,14 +23,12 @@ if (ENABLE_UNIT_TESTS)
 
   cinch_add_unit(test_simple_mesh
     SOURCES test/test_simple_mesh.cc
-    POLICY MPI
-    THREADS 1
+    POLICY SERIAL
     )
 
   cinch_add_unit(test_simple_state
     SOURCES test/test_simple_state.cc
-    POLICY MPI
-    THREADS 1
+    POLICY SERIAL
     )
 
 endif (ENABLE_UNIT_TESTS)
