--- a/src/intersect/CMakeLists.txt
+++ b/src/intersect/CMakeLists.txt
@@ -41,12 +41,12 @@ if(ENABLE_UNIT_TESTS)
       LIBRARIES ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
       POLICY MPI
       )
-
-    cinch_add_unit(intersect_r3d
-      SOURCES intersect_r3d_test.cc r3d.c
-      LIBRARIES ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
-      POLICY MPI
-      )
   endif (Jali_DIR)
+
+  cinch_add_unit(intersect_r3d
+    SOURCES intersect_r3d_test.cc r3d.c
+    LIBRARIES portage 
+    POLICY SERIAL
+    )
 endif(ENABLE_UNIT_TESTS)
 
