if TANGRAM and XMOF2D are found, add them to the link library list

--- a/app/msmapp/CMakeLists.txt
+++ b/app/msmapp/CMakeLists.txt
@@ -9,10 +9,20 @@ Please see the license file at the root of this repository, or at:
 # Add a rule to build the executable
 #------------------------------------------------------------------------------#
 
+  message(STATUS "TANGRAM_FOUND value in app/msmapp/CMakeLists.txt is ${TANGRAM_FOUND}")
+  message(STATUS "TANGRAM_INCLUDE_DIRS value in app/msmapp/CMakeLists.txt is ${TANGRAM_INCLUDE_DIRS}")
+
 # Msm test
 add_executable(msmapp msmapp.cc)
 target_link_libraries(msmapp portage
   ${EXTRA_LIBS} ${LAPACKE_LIBRARIES} ${MPI_CXX_LIBRARIES})
+
+if (TANGRAM_FOUND)    # tangram is header only package
+  include_directories(${TANGRAM_INCLUDE_DIRS})
+  if (XMOF2D_FOUND)   # Right now we are using tangram with XMOF2D
+    target_link_libraries(msmapp ${XMOF2D_LIBRARIES})
+  endif (XMOF2D_FOUND)
+endif (TANGRAM_FOUND)
 
 
 #TCMalloc option
