modified CMakeLists.txt and split my new tests out into their own file because they need the Jali lib dependencies

--- a/src/intersect/CMakeLists.txt
+++ b/src/intersect/CMakeLists.txt
@@ -41,6 +41,12 @@ if(ENABLE_UNIT_TESTS)
       LIBRARIES ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
       POLICY MPI
       )
+
+    cinch_add_unit(intersect_r3d_jali
+      SOURCES intersect_r3d_jali_test.cc r3d.c
+      LIBRARIES ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+      POLICY MPI
+      )
   endif (Jali_DIR)
 
   cinch_add_unit(intersect_r3d
