Math routines for particle integration. Working forms for 1D interval, 2D quadrilateral and triangle, and 3D hex. 3D wedge and tetrahedron coded but incorrect. Need to fix. Forgot pyramids.

--- a/portage/support/CMakeLists.txt
+++ b/portage/support/CMakeLists.txt
@@ -16,6 +16,7 @@ set(support_HEADERS
     Matrix.h
     weight.h
     basis.h
+    operator.h
     lsfits.h
     svd.h
     PARENT_SCOPE
@@ -46,6 +47,12 @@ if (ENABLE_UNIT_TESTS)
 
   cinch_add_unit(test_basis
     SOURCES test/test_basis.cc
+    POLICY MPI
+    THREADS 1
+    )
+
+  cinch_add_unit(test_operator
+    SOURCES test/test_operator.cc
     POLICY MPI
     THREADS 1
     )
