--- a/src/distributed/CMakeLists.txt
+++ b/src/distributed/CMakeLists.txt
@@ -16,7 +16,7 @@ if (ENABLE_UNIT_TESTS)
   if (Jali_DIR)
     cinch_add_unit(test_mpi_bounding_boxes
                    SOURCES test/test_mpi_bounding_boxes.cc
-                   LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+                   LIBRARIES portage ${LAPACKE_LIBRARIES} ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
                    POLICY MPI
                    THREADS 4)
   endif (Jali_DIR)
