--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -26,24 +26,24 @@ if (ENABLE_UNIT_TESTS)
    if (Jali_DIR)
        cinch_add_unit(test_driver_multivar
        SOURCES test/test_driver_multivar 
-       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+       LIBRARIES portage ${LAPACKE_LIBRARIES} ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
        POLICY MPI
        THREADS 1)
        cinch_add_unit(test_driver
        SOURCES test/test_driver 
-       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+       LIBRARIES portage ${LAPACKE_LIBRARIES} ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
        POLICY MPI
        THREADS 1)
        cinch_add_unit(test_driver_step
        SOURCES test/test_driver_step 
-       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+       LIBRARIES portage ${LAPACKE_LIBRARIES} ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
        POLICY MPI
        THREADS 1)
 
      if (TANGRAM_FOUND AND XMOF2D_FOUND)
        cinch_add_unit(test_multimat_driver
        SOURCES test/test_multimat_driver
-       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES} ${XMOF2D_LIBRARIES}
+       LIBRARIES portage ${LAPACKE_LIBRARIES} ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES} ${XMOF2D_LIBRARIES}
        POLICY MPI
        THREADS 1)       
      endif (TANGRAM_FOUND AND XMOF2D_FOUND)
