remove shotshellapp as a subdirectory

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,6 +4,8 @@ Please see the license file at the root of this repository, or at:
     https://github.com/laristra/portage/blob/master/LICENSE
 ]]
 
+include_directories(include)  # contains user_field.h for expression parsing
+
 add_subdirectory(apptest_cmp)
 add_subdirectory(simple_mesh_app)
 add_subdirectory(swarmapp)
@@ -12,7 +14,6 @@ if (Jali_DIR OR ENABLE_FleCSI)
   add_subdirectory(portageapp)
 endif (Jali_DIR OR ENABLE_FleCSI)
 if (Jali_DIR)
-  add_subdirectory(shotshellapp)
   add_subdirectory(timingapp)
 endif (Jali_DIR)
 
