removed some header files Mesh.hh, etc. that were actually part of JALI

--- a/src/intersect/CMakeLists.txt
+++ b/src/intersect/CMakeLists.txt
@@ -36,13 +36,14 @@ if(ENABLE_UNIT_TESTS)
       POLICY MPI
       )
 
-    cinch_add_unit(intersect_r2d
-      SOURCES intersect_r2d_test.cc r2d.c
-      LIBRARIES ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
-      POLICY MPI
-      )
   endif (Jali_DIR)
 
+  cinch_add_unit(intersect_r2d
+    SOURCES intersect_r2d_test.cc r2d.c
+    LIBRARIES 
+    POLICY SERIAL
+    )
+    
   cinch_add_unit(intersect_r3d
     SOURCES intersect_r3d_test.cc r3d.c
     LIBRARIES portage 
