First step in implementing the integration test. The app takes nx and ny, generates 2D SimpleMesh in a unit square, computes volume fractions and centroids for a given linear material interface, and writes the results of the reconstruction to a gmv file.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -16,4 +16,7 @@ endif (Jali_DIR OR ENABLE_FleCSI)
 if (Jali_DIR)
   add_subdirectory(timingapp)
 endif (Jali_DIR)
+if(XMOF2D_DIR)
+  add_subdirectory(ir_linetest_app)
+endif(XMOF2D_DIR)
 
