--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -16,7 +16,7 @@ endif (Jali_DIR OR ENABLE_FleCSI)
 if (Jali_DIR)
   add_subdirectory(timingapp)
 endif (Jali_DIR)
-if(XMOF2D_DIR)
+if(TANGRAM_FOUND AND XMOF2D_FOUND)
   add_subdirectory(ir_linetest_app)
-endif(XMOF2D_DIR)
+endif(TANGRAM_FOUND AND XMOF2D_FOUND)
 
