added libraries to CMakeLists.txt

--- a/src/intersect/CMakeLists.txt
+++ b/src/intersect/CMakeLists.txt
@@ -64,7 +64,7 @@ if(ENABLE_UNIT_TESTS)
       include_directories(${TANGRAM_INCLUDE_DIRS})
       cinch_add_unit(test_tangram_intersect
        SOURCES test/test_tangram_intersect 
-       LIBRARIES portage  ${LAPACKE_LIBRARIES} 
+       LIBRARIES portage  ${LAPACKE_LIBRARIES} ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES} ${XMOF2D_LIBRARIES}
        POLICY SERIAL
        )       
   endif (TANGRAM_FOUND AND XMOF2D_FOUND)
