added message to CMakeLists and removed Jali

--- a/src/intersect/CMakeLists.txt
+++ b/src/intersect/CMakeLists.txt
@@ -62,9 +62,10 @@ if(ENABLE_UNIT_TESTS)
 
   if (TANGRAM_FOUND AND XMOF2D_FOUND)
       include_directories(${TANGRAM_INCLUDE_DIRS})
+      message("  *** DWS included Tangram Directory: " ${TANGRAM_INCLUDE_DIRS})
       cinch_add_unit(test_tangram_intersect
        SOURCES test/test_tangram_intersect 
-       LIBRARIES portage  ${LAPACKE_LIBRARIES} ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES} ${XMOF2D_LIBRARIES}
+       LIBRARIES portage  ${LAPACKE_LIBRARIES} 
        POLICY SERIAL
        )       
   endif (TANGRAM_FOUND AND XMOF2D_FOUND)
